Create nav sidebar button

--- a/index.html
+++ b/index.html
@@ -13,8 +13,7 @@
     </head>
     <body class="container">
         <div class="sidebar">
-            SideBar
-<!--            <button class="nav-btn"></button>-->
+            <button class="nav-btn"></button>
         </div>
 
         <header class="header">
